src/css/index.css
body {
  background-color: rgba(180, 207, 217, 0.82);
  background-image: url('../images/splatters.svg');
  background-size: cover;
  font: 400 1.125em/1.38 Lora;
  color: rgb(0, 0, 0);
}

.cta {
  display: block;
  margin: 1em auto 2em;
  padding: 0.778em;
  min-width: 30%;
  border: 3px solid #0e191b;
  background-color: #0e191b;
  font-family: Karla-Bold;
  font-size: 1em;
  font-weight: normal;
  text-align: center;
  text-transform: uppercase;
  color: #F4F9FB;
  transition: all .2s cubic-bezier(.55,0,.1,1), box-shadow 1s cubic-bezier(0.2, 0.6, 0.1, 1), text-shadow 1s cubic-bezier(0.2, 0.6, 0.1, 1);
  box-shadow: 0 5px 6px -3px rgba(0,0,0,.2),0 9px 12px 1px rgba(0,0,0,.14),0 3px 16px 2px rgba(0,0,0,.12);
  text-shadow: 0 2px 6px rgba(0,0,0,0);
}
.cta:hover, .cta:focus {
  background-color: #2a333b;
  border-color: #2a333b;
  color: rgb(244, 249, 251);
  box-shadow: 0 5px 6px -3px rgba(0,0,0,.2),0 9px 12px 1px rgba(0,0,0,.14),0 3px 16px 2px rgba(0,0,0,.12);
}
.cta:active {
  background-color: transparent;
  border-color: #0e191b;
  color: #0e191b;
  box-shadow: 0 9px 11px -5px rgba(0,0,0,.1),0 18px 28px 2px rgba(0,0,0,.1),0 7px 34px 6px rgba(0,0,0,.12),
  0 9px 11px -5px rgba(0,0,0,.1) inset,0 18px 28px 2px rgba(0,0,0,.1) inset,0 7px 34px 6px rgba(0,0,0,.12) inset;
  text-shadow: 0 9px 11px rgba(0,0,0,0.3);
}

.hr {
  height: 3px;
  background-color: rgba(180, 207, 217, 0.82);
}

.svg-icons-hide {
  visibility: hidden;
  position: absolute;
  margin-left: -100%;
}

.titlecontainer {
  float: left;
  width: 100%;
  border-bottom: 0.38em solid #37e7a2;
  background: rgba(180, 207, 217, 0.54);
  background: linear-gradient(360deg, rgba(180, 207, 217, 0.54) 0%, rgba(0, 0, 0, 0) 42%), url('../images/photo-1439737567250-e9ea931e97a4.jpeg') #2a333b;
  background-repeat: repeat, no-repeat;
  background-size: 100% 100%, cover;
  background-position: 0% 0%, 50% 91%;
  background-attachment: scroll, scroll;
}
.title {
  padding-top: 0.345em;
  padding-bottom: 0.345em;
  font-family: "Karla", sans-serif;
  font-size: 6.444em;
  font-weight: normal;
  text-align: center;
  z-index: 10;
  color: rgb(14, 25, 27);
  transform: translateY(47.5%);
}

.container {
  clear: both;
  width: 80%;
  max-width: 80em;
  margin: auto;
  padding: 4.9em 4em 4em;
  background-color: rgba(244, 249, 251, 1);
  margin-bottom: 5em;
  border-bottom: 0.38em solid #37e7a2;
  box-shadow: 0 11px 15px -7px rgba(0,0,0,.2),0 24px 38px 3px rgba(0,0,0,.14),0 9px 46px 8px rgba(0,0,0,.12);
}
.container p {
  margin-top: 1.056em;
  font-size: 1em;
}
.container h2 {
  /*clear: both;*/
  width: 100%;
  margin-top: .4em;
  font-family: "Karla", sans-serif;
  font-size: 2.167em;
  font-weight: normal;
  text-align: center;
}
.container h3 {
  font-family: "Karla", sans-serif;
  font-size: 1.2em;
  font-weight: 600;
}

.feature {
  clear: both;
  display: flex;
  margin-left: -1.5em;
  margin-right: -1.5em;
  flex-direction: row;
  align-items: center;
}
.feature:nth-of-type(2n) {
  flex-direction: row-reverse;
}
.feature .description {
  flex-grow: 1;
  padding: 1.5em;
}
.feature .icon {
  height: 6em;
  width: 4em;
  padding: 1em 0;
  margin: 1.5em;
  background: #37e7a2;
  border-radius: 100%;
  flex: 0 0 6em;
  fill: #2a333b;
  box-shadow: 0 9px 11px -5px rgba(0,0,0,.2),0 18px 28px 2px rgba(0,0,0,.14),0 7px 34px 6px rgba(0,0,0,.12);
}

@media(max-width: 915px) {
  .container {
    padding: 3em 2em 2em;
  }

  .titlecontainer {
    border-bottom-width: 0.222em;
  }

  .titlecontainer .title {
    padding-top: 0.556em;
    padding-bottom: 0.556em;
    font-size: 4em;
  }
  .title {
    transform: translateY(48%);
  }
}

@media(max-width: 503px) {
  body {
    font-size: 1.125em;
  }

  .container {
    padding: 2em 1em 1em;
    width: 100%;

  }

  .container .cta {
    width: 100%;
    padding: 0.6em;
    font-size: 1.333em;
  }

  .titlecontainer {
    border-bottom-width: 0.27em;
  }

  .titlecontainer .title {
    padding-top: 0.667em;
    padding-bottom: 0.667em;
    font-size: 3.333em;
    font-weight: 600;
    transform: translateY(48.2%);
  }
}

